--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "messapp-server",
-  "version": "1.0.0",
-  "description": "Server for messaging app by NodeJs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Maduro29/messapp-server.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Maduro29/messapp-server/issues"
-  },
-  "homepage": "https://github.com/Maduro29/messapp-server#readme",
-  "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^3.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  }
+    "name": "messapp-server",
+    "version": "1.0.0",
+    "description": "Server for messaging app by NodeJs",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Maduro29/messapp-server.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Maduro29/messapp-server/issues"
+    },
+    "homepage": "https://github.com/Maduro29/messapp-server#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.4.1",
+        "express": "^4.18.2",
+        "nodemon": "^3.0.3",
+        "pg": "^8.11.3",
+        "prettier": "^3.2.4",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.3"
+    },
+    "type": "module"
 }
