--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "nodemon": "^3.0.3",
         "pg": "^8.11.3",
         "prettier": "^3.2.4",
+        "redux-persist": "^6.0.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
